<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    app:cardUseCompatPadding="true">

<!--    根布局，防止重叠-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

<!--    第一行logo+名字-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:padding="16dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="25sp"
            android:text="@string/app_name" />
    </LinearLayout>
    </LinearLayout>

<!--    版本信息-->
    <LinearLayout
        android:id="@+id/version_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/icon_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/version_info"
            tools:ignore="ContentDescription,UnusedAttribute" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_word"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

<!--    介绍页-->
    <LinearLayout
        android:id="@+id/using_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/intro_page_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/intro_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/using_helper"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />/>
    </LinearLayout>

<!--    github链接-->
    <LinearLayout
        android:id="@+id/github_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/github" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/opensource_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />/>
    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>