<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--        显示关于开发者信息-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:text="@string/about_author" />

<!--        作者信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:id="@+id/intro_page_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/person"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="QQ:2485535417 Comefrom CQUPT"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

<!--        给作者发邮件-->
        <LinearLayout
            android:id="@+id/email_to_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:id="@+id/github_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/email" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/email_to_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>