<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        显示关于设备信息-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:text="@string/about_device" />

<!--        安卓版本显示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/android_logo"/>
            <TextView
                android:id="@+id/android_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/android_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

<!--        API版本显示-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/android_sdk"/>
            <TextView
                android:id="@+id/android_sdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/android_sdk"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

<!--        内核版本-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/linux"/>
            <TextView
                android:id="@+id/kernel_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

<!--        系统架构-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/cpu"/>
            <TextView
                android:id="@+id/cpu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

<!--        webview版本-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/chromium"/>
            <TextView
                android:id="@+id/chromium_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>